[package]
name = "movement"
version = "0.1.0"
authors = ["Angus Finch <developer.finchie@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
sensor = { path = "../sensor" }
connection = { path = "../connection" }
byteorder = "1.3.4"
serialport = { git = "https://gitlab.com/susurrus/serialport-rs.git" }
