[package]
name = "movement"
version = "0.1.0"
authors = ["Angus Finch <developer.finchie@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
sensor = { path = "../sensor" }
connection = { path = "../connection" }
byteorder = "1.3.4"
serialport = "4.0.1"
num-traits = "0.2.14"
phf = "0.8.0"
serde = {version = "1.0.126", features = ["derive"]}
serde_yaml = "0.8.17"

[build-dependencies]
phf_codegen = "0.8.0"
