[package]
name = "movement"
version = "0.1.0"
authors = ["Angus Finch <developer.finchie@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
sensor = { path = "../sensor" }
connection = { path = "../connection" }
num-traits = "0.2.14"
phf = "0.8.0"
ron = "0.6.4"
serde = {version = "1.0.126", features = ["derive"]}
thiserror = "1.0.25"

[build-dependencies]
phf_codegen = "0.8.0"
walkdir = "2.3.2"
serde = {version = "1.0.126", features = ["derive"]}
